Add separate business directory resource, update account resources
