# server/api/controllers/business/business.router.js
@@ -3,8 +3,5 @@ import businessController from './business.controller';
 
 export default express
     .Router()
-    .post('/', businessController.create)
     .get('/', businessController.all)
-    .get('/:id', businessController.byId)
-    .put('/:id', businessController.update)
-    .delete('/:id', businessController.delete)
+    .get('/:businessId', businessController.byId)
