# server/api/controllers/consumeraccount/consumeraccount.router.js
@@ -1,0 +1,7 @@
+import * as express from 'express';
+import consumerAccountController from './consumeraccount.controller';
+
+export default express
+    .Router()
+    .get('/', consumerAccountController.all)
+    .get('/:consumerId', consumerAccountController.byId)
